# chip-pinout-diagram

./: .New.gn  .gitignore  New.gn  config.yaml  main.py  test_basic.py  test_env.py  test_function_field.py  test_qt.py  test_simple.py  test_svg.py  基本设置配置文件的说明.txt  文件与文件夹说明.txt  未命名.txt  项目流程计划.md  项目需求.md  项目需求与描述.txt
.trae/rules/: gz.md
dialogs/: __init__.py  style_dialog.py
models/: __init__.py  chip_model.py  pin_model.py  style_model - 副本.py  style_model.py
preset/: Groupingstyle - 副本 (通配).gn  Groupingstyle - 副本.gn  Groupingstyle.back.gn  Groupingstyle.gn  New.gn  default_styles.gn  op-amp.gn
ui/: __init__.py  main_window.py  pin_list_widget.py  svg_viewer.py
utils/: __init__.py  config_manager.py  file_parser.py  style_loader.py  svg_generator.py
保存/: 32F103C8-12121212-QFN.txt  ADI-ADA4097-2-PID-6.txt  DMG3402LQ-PID-6.txt  ESP32-109910-QFN.txt  GS8573-3232-QFN.txt  GS8573-PID-6.txt  STC8H1K08-SOP-16.txt  STC8H1K08T-PID-20.txt  STC8H1K17T-SOP-17.txt  STC8H2K08U-5555-QFN.txt  STC8H2K08U-6556-QFN.txt  STM32F103C8-12121212-QFN.txt  STM32F103RDT6TR-16161616-QFN (2).txt  STM32F103RDT6TR-16161616-QFN - NC.txt  STM32F103RDT6TR-16161616-QFN.txt  STM32F103RDT6TR-16161616-QFP.txt  未命名 - 副本.txt  未命名.txt
芯片引脚文件/: ESP32-C6-wroom-1 .txt  STC8H1K08-36I-SOP16.txt  STC8H1K08T -20pin - 副本.txt  STC8H1K08T -20pin.txt  STC8H1K08T-33I-SOP16 .txt  STC8H1K08T-PID-16.txt  STC8H1K17T-33I-SOP16.txt  STC8H2K08U-QFN20 .txt  STM32F103C8.txt  STM32F103RDT6TR .txt
