//组名:字体,加粗,斜体,字号,字体颜色,圆角半径,边框线宽,边框颜色,背景颜色,{关联引脚名1,关联引脚名2,关联引脚名3,,,}
GND	:Cursive,0,1,12,#FFFFFF,3,1,#ebffec,#000000,{GND,GND\w+,\w+GND,\w+GND\w+,VSS.*,VSSA,0V,V-}
VCC	:Arial,0,0,12,#000000,3,1,#37f06b,#FF0000,{-?\+?\d+(?:\.\d+)?V,VDD\d*V\d?,VCC\d*V\d?,\w*VCC\w*,\w*VDD\w*,V\+,V3,-?\+?3V3,-?\+?\d*\.\d?,V5,\w?VCORE\w?,VDDIO,PVDD,VDD3P3,-?\+?BAT-?\+?,VBAT,-?\+?VBUS-?\+?,-?\+?VREF-?\+?,VEE}
RESET	:Calibri,0,0,12,#000000,3,1,#000000,#55ff00,{RESET,NRST,RST,nRST,RST_?N,RESET_?N}
GPIO	:Arial,0,0,12,#000000,7,1,#000000,#ffff56,{GPIO\d+,P[A-Za-z]\d,P[A-Za-z]\d\d,P\d,P\d\.\d+,P\d\d}
PWM	:Aa细黑,1,0,12,#ffffff,3,0,#424242,#a3bf06,{PWM\d+,PWM\dN,PWM\dP,PWM\w+}
USART	:Cursive,0,0,12,#FFFFFF,3,1,#000000,#ff8302,{TXD,RXD,\w*USART_?\w*,\w*UART.?\w*,TX\w?_?\d\d*,RX\w?_?\d\d*,U\d?_TX,U\d?_RX,CTS,RTS,nCTS,nRTS,DTR}
I2C	:Adobe 黑体 Std R,0,0,12,#E0E0E0,3,1,#424242,#007fff,{\w*I2C\w*,\w*IIC\w*,SCL\w+,\w+SCL,\w+SCL\w+,SDA\w+,\w+SDA,\w+SDA\w+,I2CCLK,SDA,DATA,I2CDAT}
SPI	:Cursive,1,0,12,#ffffff,3,1,#424242,#ff0f2c,{\w*SPI(?!O)\w*,\w*MOSI\w*,\w*MISO\w*,\w*SCK\w*,\w*SDI(?!O)\w*,SCLK,CLK,SPI_?CLK,SCK,MOSI,SDO,DOUT,TX,SPI_?MOSI,MISO,SDI,DIN,RX,SPI_?MISO,SS,CS,CS,NSS,SPI_?CS,CE,nSS}
ADC	:Bahnschrift Light,0,0,12,#000000,3,1,#424242,#00ffff,{ADC,ADC\d*.*,AIN\d+,AN\d+,ADC_?IN\d+}
DAC	:Bahnschrift Light,0,0,12,#3f3f3f,2,1,#00ff00,#ffaaff,{DAC,DAC\d*.*,DAC_?OUT,DAC\w*}
TIM	:Cursive,0,0,12,#3f3f3f,3,2,#000000,#d2ffbd,{TIM\d+_?\w+}
I2S	:Cursive,0,0,12,#ebffec,3,1,#007fff,#0055ff,{\w*I2S\w*,\w*IIS\w*,BCLK,I2S_?BCLK,SCK,CLK,WS,LRCLK,I2S_?WS,FS,LRC,SD,I2S_?SD,SDATA,DIN,DOUT,MCLK,I2S_?MCLK,MCLK,SYSCLK,I2C_?CLK,I2C_?DATA}
