//组名:字体,加粗,斜体,字号,字体颜色,圆角半径,边框线宽,边框颜色,背景颜色,{关联引脚名1,关联引脚名2,关联引脚名3,,,}
GND	:Cursive,0,0,12,#FFFFFF,3,1,#000000,#000000,{GND,AGND,DGND,VSS,PGND,V-}
VCC	:Cursive,0,0,12,#000000,3,1,#000000,#FF0000,{VCC,AVCC,VDD,V+,V3,3V,+3V,3.3,3V3,3.3V,V5,5V,+5V,15V,20V,24V,V+,VBAT,VREF,VCORE,VDDIO,AVDD, AVCC,DVDD, DVCC,PVDD,VDDIO, VDD3V3,BAT,VDDIO, VDD3P3,VREF+}
RESET	:Cursive,0,0,12,#000000,3,1,#000000,#f7f700,{RESET}		,
GPIO	:Cursive,0,0,12,#000000,3,1,#000000,#ffff56,{GPIO,P0,P1,P2,P3,P4,P5,P6,P7,P8,P9,P01,P02,P03,P04,P05,P06,P07,P08,P09,P10,P11,P12,P13,P14,P15,P16}
PWM	:Cursive,0,0,12,#3f3f3f,3,1,#424242,#ead0d0,{PWM,PWM0,PWM1,PWM2,PWM3,PWM4,PWM5,PWM6,PWM7,PWM8,PWM9,PWM00,PWM01,PWM02,PWM03,PWM04,PWM05,PWM06,PWM07,PWM08,PWM09,PWM10,PWM11,PWM12,PWM13,PWM14,PWM15,PWM16}
USART	:Cursive,0,0,12,#FFFFFF,3,1,#000000,#4291e5,{TX1,RX1,TX0,RX0,TX2,RX2,TX3,RX3,TX4,RX4,TX5,RX5,TXD0,RXD0,TXD1,RXD1,TXD2,RXD2,TXD3,RXD3,UART0TX,UART0RX,UART1TX,UART1RX,UART2TX,UART2RX,UART0_RX,UART0TX,UART1_RX,UART1TX,UART2_RX,UART2TX,UART3_RX,UART3TX,CTS,RTS,nCTS/nRTS,DTR}
I2C	:Cursive,0,0,12,#E0E0E0,3,1,#424242,#007fff,{SCL,I2C_SCL, CLK, I2CCLK,SDA,I2C_SDA, DATA, I2CDAT}
I2S	:Cursive,0,0,12,#007fff,3,1,#007fff,#ead0d0,{BCLK,I2S_BCLK, SCK, CLK,WS,LRCLK,I2S_WS, FS, LRC,SD,I2S_SD, SDATA, DIN/DOUT,MCLK,I2S_MCLK, MCLK, SYSCLK}
SPI	:Cursive,0,0,12,#3f3f3f,3,1,#424242,#007f00,{SCLK,CLK, SPI_CLK, SCK,MOSI,SDO, DOUT, TX, SPI_MOSI,MISO,SDI, DIN, RX, SPI_MISO,SS/CS,CS, NSS, SPI_CS, CE}
DAC	:Cursive,0,0,12,#3f3f3f,3,1,#565656,#ffaaaa,{DAC,DAC0,DAC1,DAC2,DAC3,DAC4,DAC5,DAC6,DAC7,DAC8,DAC9,DAC00,DAC01,DAC02,DAC03,DAC04,DAC05,DAC06,DAC07,DAC08,DAC09,DAC10,DAC11,DAC12,DAC13,DAC14,DAC15,DAC16}
ADC	:Cursive,0,0,12,#000000,3,1,#424242,#00ffff,{ADC,ADC0,ADC1,ADC2,ADC3,ADC4,ADC5,ADC6,ADC7,ADC8,ADC9,ADC00,ADC01,ADC02,ADC03,ADC04,ADC05,ADC06,ADC07,ADC08,ADC09,ADC10,ADC11,ADC12,ADC13,ADC14,ADC15,ADC16}
XTAL	:Cursive,0,0,12,#000000,3,1,#424242,#ead0d0,{XTAL1,XTAL2,XTAL01,XTAL02}
