//组名:字体,加粗,斜体,字号,字体颜色,圆角半径,边框线宽,边框颜色,背景颜色,{关联引脚名1,关联引脚名2,关联引脚名3,,,}
OUT	:Arial,0,0,16,#000000,3,1,#000000,#00ffff,{Vout}
IN	:Arial,0,0,16,#000000,3,1,#000000,#ff6122,{.IN,IN.}
VS+	:Arial,0,0,16,#000000,3,1,#ffffff,#ff0000,{+Vs,VDD}
VS-	:Arial,0,0,16,#ffffff,3,1,#ffffff,#000000,{-Vs,VSS}
SHDN	:Dubai Light,0,0,16,#000000,3,1,#000000,#ffff00,{}
